Fix: Height overflow
Game height should remain within the viewport, adjusted card img max sizes and set box-sizing to border box to fix overflow

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,7 +1,7 @@
 
 /* Size of pokemon image */
 .pokeImg {
-    max-width: 150px;
+    max-width: 140px;
 }
 
 /* Pokemon cards grid parent */
